<resources>
    <string name="app_name">Esi Plus</string>
    <string name="home">Home</string>
    <string name="courses">Courses</string>
    <string name="planner">Planner</string>
    <string name="profile">Profile</string>

    <string-array name="groupe">
        <item>Groupe</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="didn_t_receive_a_code">Didn\'t receive a code?</string>
    <string name="confirm">Confirm</string>
    <string name="subject">Subject</string>
    <string name="descreption">Descreption</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="email">Email</string>
    <string name="create_post">Create Post</string>
    <string name="post">Post</string>
    <string name="optional">(Optional)</string>
    <string name="account">Account</string>
    <string name="information">Information</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="verify_password">Verify Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="esi_plus">Esi Plus</string>
    <string name="person">person</string>
    <string name="added_date">Added Date</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</string>
    <string name="add_photo">Add Photo</string>
    <string name="like">Like</string>
    <string name="add_a_photo">Add  Photo</string>
    <string name="by">By</string>
    <string name="person_s_name">Person\'s Name</string>

    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="grade">
        <item>Grade</item>
        <item>1CP</item>
        <item>2CP</item>
        <item>1CS</item>
        <item>2CS</item>
        <item>3CS</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_more_does">No More Does</string>
    <string name="my_does">My Does</string>
    <string name="to_do_list">To Do List</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing">lorem ipsum is simply dummy text of the printing</string>
    <string name="add_a_task">Add Task</string>
    <string name="add_a_time">Add a Time</string>
    <string name="task_title">Task Title</string>
    <string name="add">Add</string>
    <string name="new_task">New Task</string>

</resources>