<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:icon="@drawable/icons"
            android:title="@string/home"/>
        <item android:id="@+id/planner"
            android:icon="@drawable/plan"
            android:title="@string/planner"/>
        <item android:id="@+id/courses"
            android:icon="@drawable/course"
            android:title="@string/courses"/>
        <item android:id="@+id/profile"
            android:icon="@drawable/user"
            android:title="@string/profile"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="Log Out"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="Share"/>
            <item android:id="@+id/nav_feedback"
                android:icon="@drawable/feedback"
                android:title="FeedBack"/>
        </menu>
    </item>

</menu>